Refactoring README files into a 'doc' folder. Days 9, 10, 11 and 12 modified