@@ -1,6 +1,5 @@
 package software.aoc.day11;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -12,8 +11,9 @@ public class NetworkParser {
         for (String line : lines) {
             String[] parts = line.split(": ");
             String source = parts[0];
+
             List<String> destinations = parts.length > 1
-                    ? Arrays.asList(parts[1].split(" "))
+                    ? List.of(parts[1].split(" "))
                     : List.of();
 
             tempAdjList.put(source, destinations);
